--- a/src/Components/Header/header.styles.scss
+++ b/src/Components/Header/header.styles.scss
@@ -1,5 +1,41 @@
 .header {
   display: flex;
   align-items: center;
-  padding: 15px;
+  justify-content: space-between;
+  padding: 10px 20px;
+  background-color: #485bbd;
+  color: white;
+  position: relative;
+  z-index: 10;
+  box-shadow: 0 0 3px 1px rgb(106, 106, 106);
+
+  h2,
+  h3 {
+    font-weight: 500;
+  }
+
+  .search-div {
+    display: flex;
+    align-items: center;
+
+    .search {
+      margin-left: 15px;
+      background-color: #6575c7;
+      padding: 8px;
+      border-radius: 5px;
+
+      .icon {
+        font-size: 13px;
+      }
+
+      input {
+        border: none;
+        background-color: #6575c7;
+        color: white;
+        outline: none;
+        margin-left: 7px;
+        width: 12rem;
+      }
+    }
+  }
 }
