--- a/src/Components/Header/header.styles.scss
+++ b/src/Components/Header/header.styles.scss
@@ -21,11 +21,17 @@
     .search {
       margin-left: 15px;
       background-color: #6575c7;
-      padding: 8px;
       border-radius: 5px;
+      position: relative;
+      width: 12rem;
+      overflow: hidden;
 
       .icon {
         font-size: 13px;
+        user-select: none;
+        position: absolute;
+        left: 10px;
+        top: 9px;
       }
 
       input {
@@ -33,8 +39,14 @@
         background-color: #6575c7;
         color: white;
         outline: none;
-        margin-left: 7px;
-        width: 12rem;
+        width: 100%;
+        height: 100%;
+        padding: 8px;
+        padding-left: 30px;
+
+        &:hover {
+          background-color: #7082d9;
+        }
       }
     }
   }
