--- a/src/Components/List/list.styles.scss
+++ b/src/Components/List/list.styles.scss
@@ -1,3 +1,27 @@
 .list {
   width: 30%;
+  padding: 1rem;
+
+  h1 {
+    font-size: 1.6rem;
+    font-weight: 500;
+  }
+
+  .select-div {
+    margin-top: 1rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 5px;
+
+    select {
+      width: 7rem;
+      padding: 5px;
+      border: none;
+      cursor: pointer;
+      color: #7082d9;
+      border: 1px solid #7082d9;
+      border-radius: 3px;
+      width: 100%;
+    }
+  }
 }
