--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 @import "./Components/Header/header.styles.scss";
 @import "./Components/List/list.styles.scss";
 @import "./Components/Map/map.styles.scss";
+@import "./Components/Card/card.styles.scss";
 
 * {
   padding: 0;
