--- a/src/Components/List/list.styles.scss
+++ b/src/Components/List/list.styles.scss
@@ -12,6 +12,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 5px;
+    margin-bottom: 1rem;
 
     select {
       width: 7rem;
@@ -23,5 +24,10 @@
       border-radius: 3px;
       width: 100%;
     }
+  }
+
+  .list-cards {
+    max-height: calc(100vh - 206.5px);
+    overflow: auto;
   }
 }
