--- a/src/Components/Card/card.styles.scss
+++ b/src/Components/Card/card.styles.scss
@@ -1,7 +1,10 @@
 .card {
-	background-color: rgb(239, 239, 239);
-	margin-top: 1rem;
-	height: 20rem;
-	border-radius: 7px;
-	padding: 1rem;
+  background-color: rgb(239, 239, 239);
+  margin-top: 1rem;
+  height: 20rem;
+  border-radius: 7px;
+  padding: 1rem;
+  &:first-child {
+	margin-top: 0;
+  }
 }
